package com.netcracker.cloud.dbaas.enums;

public enum ClassifierType {
    NEW, REPLACED, TRANSIENT_REPLACED
}
