package com.netcracker.cloud.dbaas.enums;

public enum RestoreTaskStatus {
    NOT_STARTED, IN_PROGRESS, FAILED, RETRYABLE_FAIL, COMPLETED
}
